--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -rf allure-results allure-report playwright-report",
+    "clean": "rimraf allure-results allure-report playwright-report",
     "test": "npx playwright test",
     "test:html": "npx playwright test --reporter=html",
     "test:allure": "npx playwright test --reporter=line,allure-playwright",
     "allure:generate": "allure generate allure-results --clean -o allure-report",
     "allure:open": "allure open allure-report",
-    "test:session": "npm run setup-auth && npx playwright test tests/addProduct.spec.js --workers=1 && npx playwright test tests/cartVerify.spec.js --workers=1 && npx playwright test tests/checkout.spec.js --workers=1"
+    "test:session": "npx playwright test tests/addProduct.spec.js --workers=1 && npx playwright test tests/cartVerify.spec.js --workers=1 && npx playwright test tests/checkout.spec.js --workers=1"
   },
   "keywords": [],
   "author": "Rohini Shilimkar",
