adding endToend file

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:addProduct": "npx playwright test tests/addProduct.spec.js --reporter=line,allure-playwright",
     "test:cartVerify": "npx playwright test tests/cartVerify.spec.js --reporter=line,allure-playwright",
     "test:checkout": "npx playwright test tests/checkout.spec.js --reporter=line,allure-playwright",
+    "test:endToEnd": "npx playwright test tests/endToEnd.spec.js --reporter=line,allure-playwright",
     "allure:generate": "allure generate allure-results --clean -o allure-report",
     "allure:open": "allure open allure-report"
   },
